# claude-sonnet-router

./: .env  .env.example  README.md  chat_service.py  claude-sonnet-router.openapi.json  deepseek-v3.openapi.json  pyproject.toml  router.py  run.sh  spawn_services.py  state.json  validate.py
claude_sonnet_3.5.egg-info/: PKG-INFO  SOURCES.txt
deepseek_v3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
