[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-sonnet-3.5"
version = "0.1.0"
description = "A Syft LLM Router with configurable chat and search services"
authors = [
    {name = "aggregator@openmined.org"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "syft-core>=0.2.7",
    "fastsyftbox>=0.1.19",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "pydantic-settings>=2.10.1",
    "syft-accounting-sdk @ git+https://github.com/OpenMined/accounting-sdk.git"
]

[project.optional-dependencies]
chat = [
    "aiohttp>=3.8.0",
]
search = [
    "httpx>=0.24.0",
]
all = [
    "aiohttp>=3.8.0",
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
